@startuml
'https://plantuml.com/class-diagram


abstract class Bird {
    + name: String
    + colour: String

    {abstract} +speak(): void
    +fly():void
}

class Pigeon {
    +speak(): void
    +eatPizza(): void
}

class Penguin {
    +speak(): void
    +fly(): void
}

interface DanceImpl {
    +spin(): void
    +doTheCatterpillar(): void
    +jump(): void
}

DanceImpl <|-- Bird
Bird <|-- Pigeon
Bird <|-- Penguin

@enduml